# config/converter.openapi.json
@@ -15,6 +15,182 @@
     "version": "1.0.0"
   },
   "paths": {
+    "/api/console/passport/current": {
+      "get": {
+        "tags": [
+          "Passport"
+        ],
+        "description": "获取当前用户信息",
+        "operationId": "Passport_CurrentUser",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/api.console.passport.CurrentUserReply"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/console/passport/login": {
+      "post": {
+        "tags": [
+          "Passport"
+        ],
+        "description": "登录",
+        "operationId": "Passport_Login",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/api.console.passport.LoginRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/api.console.passport.LoginReply"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/console/passport/logout": {
+      "post": {
+        "tags": [
+          "Passport"
+        ],
+        "description": "登出",
+        "operationId": "Passport_Logout",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/api.console.passport.LogoutRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/api.console.passport.LogoutReply"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/console/passport/register": {
+      "post": {
+        "tags": [
+          "Passport"
+        ],
+        "description": "注册",
+        "operationId": "Passport_Register",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/api.console.passport.RegisterRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/api.console.passport.RegisterReply"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/console/passport/reset_password": {
+      "post": {
+        "tags": [
+          "Passport"
+        ],
+        "description": "重置密码",
+        "operationId": "Passport_ResetPassword",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/api.console.passport.ResetPasswordRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/api.console.passport.ResetPasswordReply"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/console/passport/send_captcha": {
+      "post": {
+        "tags": [
+          "Passport"
+        ],
+        "description": "发送验证码",
+        "operationId": "Passport_SendCaptcha",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/api.console.passport.SendCaptchaRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/api.console.passport.SendCaptchaReply"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/console/permission": {
       "get": {
         "tags": [
@@ -23,7 +199,7 @@
         "operationId": "Permission_ListPermission",
         "parameters": [
           {
-            "name": "pagination.current",
+            "name": "pagination.page",
             "in": "query",
             "schema": {
               "type": "integer",
@@ -44,13 +220,6 @@
             "schema": {
               "type": "integer",
               "format": "int32"
-            }
-          },
-          {
-            "name": "pagination.raw_total",
-            "in": "query",
-            "schema": {
-              "type": "string"
             }
           },
           {
@@ -242,7 +411,7 @@
         "operationId": "Role_ListRole",
         "parameters": [
           {
-            "name": "pagination.current",
+            "name": "pagination.page",
             "in": "query",
             "schema": {
               "type": "integer",
@@ -263,13 +432,6 @@
             "schema": {
               "type": "integer",
               "format": "int32"
-            }
-          },
-          {
-            "name": "pagination.raw_total",
-            "in": "query",
-            "schema": {
-              "type": "string"
             }
           }
         ],
@@ -308,6 +470,26 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/api.console.administration.CreateRoleReply"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/console/role-all": {
+      "get": {
+        "tags": [
+          "Role"
+        ],
+        "operationId": "Role_GetAll",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/api.console.administration.GetAllReply"
                 }
               }
             }
@@ -507,7 +689,7 @@
         "operationId": "User_ListUser",
         "parameters": [
           {
-            "name": "pagination.current",
+            "name": "pagination.page",
             "in": "query",
             "schema": {
               "type": "integer",
@@ -528,13 +710,6 @@
             "schema": {
               "type": "integer",
               "format": "int32"
-            }
-          },
-          {
-            "name": "pagination.raw_total",
-            "in": "query",
-            "schema": {
-              "type": "string"
             }
           }
         ],
@@ -771,16 +946,9 @@
           }
         }
       },
-      "api.console.administration.BindPermissionReply": {
-        "type": "object",
-        "properties": {}
-      },
-      "api.console.administration.BindPermissionRequest": {
+      "api.console.administration.BindPermissionBodyRequest": {
         "type": "object",
         "properties": {
-          "id": {
-            "type": "string"
-          },
           "permission_id": {
             "type": "string"
           },
@@ -794,6 +962,24 @@
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/api.console.administration.Action"
+            }
+          }
+        }
+      },
+      "api.console.administration.BindPermissionReply": {
+        "type": "object",
+        "properties": {}
+      },
+      "api.console.administration.BindPermissionRequest": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "data": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/api.console.administration.BindPermissionBodyRequest"
             }
           }
         }
@@ -857,6 +1043,9 @@
           "status": {
             "type": "integer",
             "format": "int32"
+          },
+          "alias": {
+            "type": "string"
           }
         }
       },
@@ -874,22 +1063,22 @@
           "username": {
             "type": "string"
           },
+          "nickname": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
           "password": {
             "type": "string"
           },
           "re_password": {
             "type": "string"
           },
-          "email": {
-            "type": "string"
+          "disabled": {
+            "type": "boolean"
           },
-          "nickname": {
-            "type": "string"
-          },
-          "role_id": {
-            "type": "string"
-          },
-          "omit_perm": {
+          "role_ids": {
             "type": "array",
             "items": {
               "type": "string"
@@ -909,9 +1098,23 @@
         "type": "object",
         "properties": {}
       },
+      "api.console.administration.GetAllReply": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/api.console.administration.RoleInfo"
+            }
+          }
+        }
+      },
       "api.console.administration.GetPermissionReply": {
         "type": "object",
         "properties": {
+          "id": {
+            "type": "string"
+          },
           "name": {
             "type": "string"
           },
@@ -1097,25 +1300,35 @@
         "type": "object",
         "properties": {
           "id": {
-            "type": "string"
+            "type": "string",
+            "description": "业务id"
           },
           "role_id": {
-            "type": "string"
+            "type": "string",
+            "description": "角色id"
           },
           "perm_id": {
-            "type": "string"
+            "type": "string",
+            "description": "权限id"
           },
           "actions": {
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/api.console.administration.Action"
-            }
+            },
+            "description": "操作权限"
           },
           "data_access": {
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/api.console.administration.Action"
-            }
+            },
+            "description": "数据权限"
+          },
+          "created_at": {
+            "type": "string",
+            "description": "绑定权限时间",
+            "format": "date-time"
           }
         }
       },
@@ -1188,6 +1401,9 @@
           "status": {
             "type": "integer",
             "format": "int32"
+          },
+          "alias": {
+            "type": "string"
           }
         }
       },
@@ -1216,6 +1432,12 @@
           "status": {
             "type": "integer",
             "format": "enum"
+          },
+          "role_ids": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
           }
         }
       },
@@ -1258,10 +1480,67 @@
           }
         }
       },
+      "api.console.passport.CurrentUserReply": {
+        "type": "object",
+        "properties": {}
+      },
+      "api.console.passport.LoginReply": {
+        "type": "object",
+        "properties": {}
+      },
+      "api.console.passport.LoginRequest": {
+        "type": "object",
+        "properties": {
+          "username": {
+            "type": "string",
+            "description": "用户名"
+          },
+          "password": {
+            "type": "string",
+            "description": "密码"
+          },
+          "auto_login": {
+            "type": "boolean",
+            "description": "自动登录"
+          }
+        }
+      },
+      "api.console.passport.LogoutReply": {
+        "type": "object",
+        "properties": {}
+      },
+      "api.console.passport.LogoutRequest": {
+        "type": "object",
+        "properties": {}
+      },
+      "api.console.passport.RegisterReply": {
+        "type": "object",
+        "properties": {}
+      },
+      "api.console.passport.RegisterRequest": {
+        "type": "object",
+        "properties": {}
+      },
+      "api.console.passport.ResetPasswordReply": {
+        "type": "object",
+        "properties": {}
+      },
+      "api.console.passport.ResetPasswordRequest": {
+        "type": "object",
+        "properties": {}
+      },
+      "api.console.passport.SendCaptchaReply": {
+        "type": "object",
+        "properties": {}
+      },
+      "api.console.passport.SendCaptchaRequest": {
+        "type": "object",
+        "properties": {}
+      },
       "protobuf.Pagination": {
         "type": "object",
         "properties": {
-          "current": {
+          "page": {
             "type": "integer",
             "format": "int32"
           },
@@ -1272,12 +1551,8 @@
           "total": {
             "type": "integer",
             "format": "int32"
-          },
-          "raw_total": {
-            "type": "string"
           }
-        },
-        "description": "通用的分页信息"
+        }
       }
     },
     "securitySchemes": {
@@ -1289,6 +1564,9 @@
     }
   },
   "tags": [
+    {
+      "name": "Passport"
+    },
     {
       "name": "Permission"
     },
